# swonch

./: .gitignore  Cargo.toml  TODO  readme.md
benches/: aes_file_storage_perf.rs  file_storage_perf.rs
examples/: nca_dump_section_raw.rs  nca_print_sections.rs  pfs0_extract.rs  pfs0_read_nsp_titlekey.rs  read_nsp_titlekey.rs
src/: error.rs  keyset.rs  lib.rs
src/common/: mod.rs  program_id.rs  rights_id.rs
src/containers/: mod.rs  nand.rs  pfs0.rs
src/containers/nca/: header.rs  mod.rs  section.rs  ticket.rs
src/containers/partitionfs/: mod.rs  pfs0.rs
src/storage/: file.rs  mapper.rs  memory.rs  mod.rs  stdio.rs  substorage.rs
src/storage/crypto/: aes_xts.rs  block_buffer.rs  mod.rs
src/storage/crypto/aes_raw/: ctr.rs  mod.rs  xts.rs
src/utils/: mod.rs  string_table.rs
