[package]
name = "swonch"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = ["binrw/std", "bstr/std", "thiserror-no-std/std", "anyhow/std", "parking_lot"]
arc_storage = []
default = []

[dependencies]
anyhow = { version = "1.0.75", default-features = false }
binrw = { version = "0.13.0", default-features = false }
bstr = { version = "1.7.0", default-features = false, features = ["alloc", "unicode"] }
false = "0.0.0"
lazy_static = "1.4.0"
log = "0.4.20"
parking_lot = { version = "0.12.1", optional = true }
ringbuffer = "0.15.0"
spin = { version = "0.9.8" }
thiserror-no-std = "2.0.2"

[dev-dependencies]
# for examples so they can work with FileStorage
swonch = { path = "./", features = ["std"] }
