[package]
name = "swonch"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = ["binrw/std", "bstr/std", "thiserror-no-std/std", "anyhow/std", "parking_lot", "shellexpand"]
default = []

[dependencies]
aes = "0.8.3"
anyhow = { version = "1.0.75", default-features = false }
binrw = { version = "0.13.0", default-features = false }
bstr = { version = "1.7.0", default-features = false, features = ["alloc", "unicode"] }
ctr = "0.9.2"
ecb = "0.1.2"
enum_dispatch = "0.3.12"
env_logger = "0.10.0"
# fork that exposes the [u8] api and works with no_std
glob-match = { git = "https://github.com/dorkeline/glob-match", version = "0.2.1" }
lazy_static = "1.4.0"
log = "0.4.20"
parking_lot = { version = "0.12.1", optional = true }
ringbuffer = "0.15.0"
shellexpand = { version = "3.1.0", optional = true}
spin = { version = "0.9.8" }
thiserror-no-std = "2.0.2"
xts-mode = { version = "0.5.1", default-features = false }

[dev-dependencies]
# for examples so they can work with FileStorage
swonch = { path = "./", features = ["std"] }
env_logger = "0.10.0"
humansize = "2.1.3"
criterion = { version = "0.4", features = ["html_reports"] }
tempfile = "3.8.1"

[[bench]]
name = "file_storage_perf"
harness = false

[[bench]]
name = "aes_file_storage_perf"
harness = false
